--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
                 </div>
                 <div class="hero-image"></div>
             </div>
+            <div class="presentacion-container">
+                <div class="presentacion-image-container">
+                    <div class="presentacion-image">
+                        <img src="images/Logo-Blanco.png" alt="logo-baking" height="100px">
+                    </div>
+                </div>
+                <div class="presentacion-text-container">
+                    <div class="presentacion-text">
+                        <p>te ofrecemos una amplia variedad de productos de panadería, dulces o salados para tu desayuno, merienda, juntada o cualquier otra ocasión.</p>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
    
