--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="main-container">
         <main>
-            <div class="hero">
+            <section class="hero">
                 <div class="hero-text">
                     <div class="hero-text-container">
                         <h1>Panadería y factureria</h1>
@@ -56,8 +56,8 @@
                     </div>
                 </div>
                 <div class="hero-image"></div>
-            </div>
-            <div class="presentacion-container">
+            </section>
+            <section class="presentacion-container">
                 <div class="presentacion-image-container">
                     <div class="presentacion-image">
                         <img src="images/Logo-Blanco.png" alt="logo-baking" height="100px">
@@ -68,7 +68,52 @@
                         <p>te ofrecemos una amplia variedad de productos de panadería, dulces o salados para tu desayuno, merienda, juntada o cualquier otra ocasión.</p>
                     </div>
                 </div>
-            </div>
+            </section>
+            <section class="products-container">
+                <h3>Productos</h3>
+                <div class="products-items-container">
+                    <div class="products-dulces product">
+                        <div class="product-image"></div>
+                        <div class="product-text">DULCES</div>
+                    </div>
+                    <div class="products-salados product">
+                        <div class="product-image"></div>
+                        <div class="product-text">SALADOS</div>
+                    </div>
+                    <div class="products-pasteleria product">
+                        <div class="product-image"></div>
+                        <div class="product-text"><span>PASTELERIA</span></div>
+                    </div>
+                    <div class="products-cafeteria product">
+                        <div class="product-image"></div>
+                        <div class="product-text"><span>CAFETERIA</span></div>
+                    </div>
+                </div>
+            </section>
+            <section class="how-to-buy-container">
+                <h3>Hacé tu Pedido</h3>
+                <p>¡Hacer tu pedido en nuestra pagina web es muy facil!</p>
+                <div class="how-to-buy-steps">
+                    <div class="steps1 steps">
+                        <div class="steps-icon"><i class="fa-solid fa-user-plus"></i></div>
+                        <div class="steps-text"><p>Creá una cuenta.
+                           <b>¡Te hacemos un descuento de 20% en tu primera compra!</b> </p></div>
+                    </div>
+                    <div class="steps2 steps">
+                        <div class="steps-icon"><i class="fa-solid fa-envelope-circle-check"></i></div>
+                        <div class="steps-text"><p>Al confirmar tu mail, dale clic a “HACE TU PEDIDO” y elegí en las distintas opciones</p></div>
+                    </div>
+                    <div class="steps3 steps">
+                        <div class="steps-icon"><i class="fa-solid fa-basket-shopping"></i></div>
+                        <div class="steps-text"><p>Llenas tus datos de contacto, el horario de envío, y ¡listo!</p></div>
+                    </div>
+                </div>
+                <div class="buttons-steps-account">
+                    <button class="create-account">Crear cuenta</button>
+                    <button class="login-account">Iniciar sesión</button>
+
+                </div>
+            </section>
         </main>
     </div>
    
